--- a/Clase_5_Listas.ipynb
+++ b/Clase_5_Listas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMl6Ub1ZlPO+/n7x2a8wpQE",
+      "authorship_tag": "ABX9TyPzsiIuG8jdwpwA7nfLdro2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
       "source": [
         "#LISTAS\n",
         "\n",
-        "1. Un nuebo tipo de dato\n",
+        "1. Un nuevo tipo de dato\n",
         "2. Es mutable\n",
         "3. Indexación: Hay un orden\n",
         "4. Hay un númro finito de posiciones\n",
