Se creó con Colab

--- a/Clase_5_Listas.ipynb
+++ b/Clase_5_Listas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPzsiIuG8jdwpwA7nfLdro2",
+      "authorship_tag": "ABX9TyPljp2Z3SQ6O2C3Yi5l6Wkz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,7 +65,7 @@
         "id": "wwcxAuvQ9rR1",
         "outputId": "4efd4df8-b948-430a-a11b-67ddbe2c4eb1"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -89,7 +89,7 @@
       "metadata": {
         "id": "IQRCqyRA_L3z"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -104,7 +104,7 @@
         "id": "tspKjR-I_QqC",
         "outputId": "3c983a2d-3f53-461c-dc02-5592902061e9"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -132,7 +132,7 @@
         "id": "lmU3QAm7_2lS",
         "outputId": "353713d8-058f-43b6-e4ce-6d7950aa1081"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -157,7 +157,7 @@
         "id": "ohHrs-cIAAkS",
         "outputId": "01e3531d-ac9f-468b-c1c8-1e34410f36c8"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -204,7 +204,7 @@
         "id": "xdEFPWn1FAa-",
         "outputId": "5e930495-3399-4ac1-8b70-4c837abf214d"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -230,7 +230,7 @@
         "id": "tKkflBlzF2vd",
         "outputId": "e1f18c9f-3655-466a-fbc7-b286bc8e4416"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -256,7 +256,7 @@
         "id": "MZWKXFpmF_7F",
         "outputId": "1a3842da-b8ac-4d1c-b046-6a2fc376e02c"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -282,7 +282,7 @@
         "id": "mXVk0LULGyoN",
         "outputId": "c5525052-d268-4bcf-f642-b628ad77578c"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -308,7 +308,7 @@
         "id": "FDND4kR5G1pM",
         "outputId": "85c75330-c6e5-42ce-faa2-4082f3d44b7d"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -364,7 +364,7 @@
         "id": "pEw_RA_JBEvh",
         "outputId": "f3341bf1-2e6c-4356-ff56-b29a5a0e0a29"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -392,7 +392,7 @@
         "id": "PyH30xqQBglx",
         "outputId": "85343770-7197-44b4-8aa5-1b6938b95365"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -418,7 +418,7 @@
         "id": "ZJV681vsEA4o",
         "outputId": "c64a0013-3e3a-4355-dfd2-6f31a439f80b"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -447,7 +447,7 @@
         "id": "ZfR47xgPHKnk",
         "outputId": "e4327649-4439-46af-a329-d5aaad920819"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -477,7 +477,7 @@
         "id": "9cwDh6pjIC-L",
         "outputId": "7f9fb5bc-16c6-40a6-d82d-ed54e9ae0713"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -497,6 +497,359 @@
           },
           "metadata": {},
           "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##EJEMPLOS"
+      ],
+      "metadata": {
+        "id": "6FBH2uXQXEbP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. Crear una lista con los cuadrados de los números del 1 al 10"
+      ],
+      "metadata": {
+        "id": "HVxxZ5VuXHGP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cuadrados = [i ** 2 for i in range(1,11)]\n",
+        "cuadrados"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OF_iTkPqXF6P",
+        "outputId": "8318c015-f930-4ae1-a254-30c563c14d62"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2. Obtener una lista con los números pares del 0 al 20"
+      ],
+      "metadata": {
+        "id": "KFV3RI5UXRI2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "NumerosPares = [i for i in range(1,21) if i%2 == 0]\n",
+        "NumerosPares"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Z6Hcq2EaXULX",
+        "outputId": "fb1c21a4-fc22-439e-8e4a-a2dac54ed1ce"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[2, 4, 6, 8, 10, 12, 14, 16, 18, 20]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3. Crear una lista con el doble de cada número del 1 al 5"
+      ],
+      "metadata": {
+        "id": "scXLcs4UXYse"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "NumerosDobles = [i * 2 for i in range(1,6)]\n",
+        "NumerosDobles"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iBAVSSw3XcLH",
+        "outputId": "72721a8c-9861-4a5a-b7b0-cb397a148758"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[2, 4, 6, 8, 10]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4. De la palabra \"programación\", obtener solo las vocales"
+      ],
+      "metadata": {
+        "id": "arOurVD9XgYO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "palabra = \"programacion\"\n",
+        "vocales = [letra for letra in palabra if letra in \"aeiou\"]\n",
+        "vocales"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sVPVt6WMXmM3",
+        "outputId": "dd3ebb56-634f-4f06-dec0-3c65db963285"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['o', 'a', 'a', 'i', 'o']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "5. Dada la lista [\"Python\", \"Java\", \"C++\"], obtener otra lista con las palabras mayúsculas"
+      ],
+      "metadata": {
+        "id": "40RKObWKXt0O"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Programas = [\"python\", \"java\", \"c++\"]\n",
+        "Mayúsculas = [i.upper() for i in Programas]\n",
+        "Mayúsculas"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dSR_0gBuX5Fe",
+        "outputId": "4ca2292a-5753-4e91-8835-69592a1deeef"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['PYTHON', 'JAVA', 'C++']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "6. Crear una lista con \"par\" o \"impar\" para los números del 1 al 10"
+      ],
+      "metadata": {
+        "id": "GsgLyrEdX7rO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ListaNumers = [1,2,3,4,5,6,7,8,9,10]\n",
+        "clasificacion = [(\"par\",x) if x%2==0 else (\"impar\",x) for x in ListaNumers]\n",
+        "clasificacion"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8oxsqQCMYAT-",
+        "outputId": "9b90ce1b-ed34-4736-9ddc-bafe94a556b2"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('impar', 1),\n",
+              " ('par', 2),\n",
+              " ('impar', 3),\n",
+              " ('par', 4),\n",
+              " ('impar', 5),\n",
+              " ('par', 6),\n",
+              " ('impar', 7),\n",
+              " ('par', 8),\n",
+              " ('impar', 9),\n",
+              " ('par', 10)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "7. Generar una lista de tuplas con el número de su cuadrado del 1 al 5"
+      ],
+      "metadata": {
+        "id": "KgCv2zDVYDGu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ListaNumeros = [1,2,3,4,5]\n",
+        "NumerosCuadrados = [(x, \"su cuadrado es\" ,x**2 ) for x in ListaNumeros]\n",
+        "NumerosCuadrados"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "quZzAj2GYG5O",
+        "outputId": "6d96c1b7-09a4-467e-be64-e992d24f78b3"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(1, 'su cuadrado es', 1),\n",
+              " (2, 'su cuadrado es', 4),\n",
+              " (3, 'su cuadrado es', 9),\n",
+              " (4, 'su cuadrado es', 16),\n",
+              " (5, 'su cuadrado es', 25)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "8. Crear una lista con todas las combinaciones de letras en [\"a\", \"b\"] y números en [1, 2, 3]"
+      ],
+      "metadata": {
+        "id": "3fuqHaAXYI6-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Letras = [\"a\",\"b\"]\n",
+        "Numeros = [1,2,3]\n",
+        "Combinados = [(letra,Numero) for letra in Letras for Numero in Numeros]\n",
+        "Combinados"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Qj6Ap3_bYTKW",
+        "outputId": "a78018cf-94bc-4c8b-f7b1-3e967e1d6b0e"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('a', 1), ('a', 2), ('a', 3), ('b', 1), ('b', 2), ('b', 3)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "9. De la lista [\"sol\", \"estrella\", \"mar\", \"planeta\"], obtener solo las palabras con más de 4 letras"
+      ],
+      "metadata": {
+        "id": "wjTZFY5IYWE1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "palabras =[\"sol\", \"estrella\", \"mar\", \"planeta\"]\n",
+        "filtro = [i for i in palabras if len(i) > 4]\n",
+        "filtro"
+      ],
+      "metadata": {
+        "id": "5yIoSBZJYd3O",
+        "outputId": "511a8268-cb0f-45b5-bc08-84867894461a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['estrella', 'planeta']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
         }
       ]
     }
