--- a/Taller_Diccionarios.ipynb
+++ b/Taller_Diccionarios.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOspvqeWBK8o0L43qDAAWZl",
+      "authorship_tag": "ABX9TyOg/EEoIIQQDj+P3raET+f5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -151,6 +151,55 @@
             "3. jose\n",
             "2\n",
             "el nombre es pedro y su edad es 15\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "17. Crea una función que reciba un diccionario y retorne el nombre del estudiante con la mayor nota"
+      ],
+      "metadata": {
+        "id": "zUdjRI3MJlci"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Estudiantes = {\"Estudiantes\": [\"Ana\", \"Luis\", \"Carlos\"],\n",
+        "                   \"Notas\": [23, 45, 53]}\n",
+        "\n",
+        "def estudiante_con_mayor_nota(notas):\n",
+        "  estudiante_mayor_nota = \"\"\n",
+        "  mayor_nota = -1\n",
+        "\n",
+        "  for estudiante, nota in notas.items():\n",
+        "    if nota > mayor_nota:\n",
+        "      mayor_nota = nota\n",
+        "      estudiante_mayor_nota = estudiante\n",
+        "\n",
+        "  return estudiante_mayor_nota\n",
+        "\n",
+        "notas_estudiantes = dict(zip(Estudiantes[\"Estudiantes\"], Estudiantes[\"Notas\"]))\n",
+        "\n",
+        "Mas_inteligente = estudiante_con_mayor_nota(notas_estudiantes)\n",
+        "print(f\"El estudiante con la mayor nota es: {Mas_inteligente}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ByctLVgJJxPB",
+        "outputId": "5e8e4362-67a2-44dc-cc65-e136b1272913"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El estudiante con la mayor nota es: Carlos\n"
           ]
         }
       ]
